fixing responsive layout issues

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -76,9 +76,10 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 470px) {
   .main-nav-menu {
-    flex-flow: row wrap;
+    flex-flow: column wrap;
+    height: 76px;
     justify-content: space-around;
   }
 
